# rust-cli-boilerplate

./: .gitignore  Cargo.toml  README.md  install.sh  tusk.yml
scripts/: upload-artifacts.sh
src/: main.rs
